# fdup

./: .gitignore  README.md  pyproject.toml
examples/: api_demo.py
examples/outputs/: dem.tif  flowacc_coarse.tif  flowacc_fine.tif  flowdir_coarse_dmm.tif  flowdir_fine.tif  watershed_coarse.tif  watershed_coarse_matched.tif  watershed_fine.tif  watershed_intersection.tif
fdup/: __init__.py  cli.py
fdup/_core/: __init__.py  d8.py  geodesy.py  slicing.py  types.py  validation.py  warmup.py
fdup/base/: __init__.py  base.py  d8.py
fdup/evals/: __init__.py  fdcomp.py  huac.py  windrose.py  wscomp.py
fdup/io/: __init__.py  read.py  write.py
fdup/upscalers/: __init__.py  cotat.py  dmm.py  nsa.py
fdup/utils/: __init__.py  d8.py  flowacc.py  masking.py  match_grids.py  pour.py  strahler.py  tree.py  vectorization.py  watershed.py
tests/: test_cli.py  test_core.py  test_evals.py  test_io.py  test_mask_seeds.py  test_masking.py  test_package.py  test_strahler.py  test_upscalers.py  test_utils.py  test_vectorization.py
